# satellite-monitor

./: MANIFEST.in  README.md  pyproject.toml
examples/: basic_usage.py  custom_location.py
src/satellite_monitor/: __init__.py
src/satellite_monitor/cli/: __init__.py  main.py
src/satellite_monitor/core/: __init__.py  location.py  passes.py  providers.py  satellites.py
src/satellite_monitor/download/: __init__.py  quick.py  sentinel.py
src/satellite_monitor/monitor/: __init__.py  advisor.py  checker.py  monitor.py
src/satellite_monitor/weather/: __init__.py  models.py  service.py  setup.py
