[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satellite-monitor"
version = "1.0.0"
description = "Multi-provider satellite imagery monitoring and weather-aware recommendation tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Trillium" }
]
keywords = [
    "satellite",
    "remote-sensing",
    "sentinel",
    "earth-observation",
    "copernicus",
    "weather",
    "sar",
    "optical-imagery",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
sentinel = [
    "sentinelsat>=1.2.1",
    "shapely>=2.0.0",
]
orbit = [
    "skyfield>=1.45",
]
streaming = [
    "confluent-kafka>=2.0.0",
    "paho-mqtt>=1.6.0",
    "websockets>=11.0",
    "aiohttp>=3.8.0",
]
all = [
    "satellite-monitor[sentinel,orbit,streaming]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
satellite-monitor = "satellite_monitor.cli.main:main"

[project.urls]
Homepage = "https://github.com/trillium/satellite-monitor"
Documentation = "https://github.com/trillium/satellite-monitor#readme"
Repository = "https://github.com/trillium/satellite-monitor"
Issues = "https://github.com/trillium/satellite-monitor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/satellite_monitor"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
